# PathTempo

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: PathTempoConfig.cmake.in
docs/: cpp_style.md  design.md  path_planner_algorithm.md
examples/: adaptive_pockets.cpp  continuous_path.cpp  continuous_path_geometry.cpp  continuous_path_geometry.h  continuous_path_options.cpp  continuous_path_options.h  endpoint_exact_arc.cpp  endpoint_exact_arc.h  geometry_text_loader.cpp  geometry_text_loader.h
examples/data/: README.md  adaptive_pockets.1.txt
include/path_tempo/: LinearOptimization.h  Planner.h  Sampling.h  Types.h  Version.h
include/path_tempo/detail/: PathPlanner.inl
src/: BoundaryRefinement.h  LinearOptimization.cpp  Planner.cpp  Version.cpp  Version.cpp.in
test/: continuous_path_options_test.cpp  endpoint_exact_arc_test.cpp  geometry_text_loader_test.cpp  test.cpp
